<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.HomeFragment"
        android:background="@drawable/background_gradient">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            android:contentDescription="@string/float_button_add"
            app:showMotionSpec="@anim/nav_default_enter_anim"
            app:srcCompat="@drawable/ic_add"
            app:fabSize="normal"
            app:backgroundTint="#FFD772"
            app:tint = "@color/white"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/layoutTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:padding="4dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_hilmi"
                    android:textSize="16sp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:maxLength="28"
                    android:textColor="@color/blue_50"
                    android:fontFamily="@font/poppins_medium"
                    />
                <ImageButton
                    android:id="@+id/btnFilter"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:contentDescription="@string/filter_btn"
                    android:background="#00FFFFFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_filter"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    />
            </RelativeLayout>
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textSize="24sp"
                style="@style/titleStyle"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintTop_toBottomOf="@id/layoutTop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvNote"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintVertical_bias="0.0"
                tools:listitem="@layout/item_note" />
            <ImageView
                android:id="@+id/imgDataEmpty"
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:src="@drawable/img_data_empty"
                android:contentDescription="@string/data_empty"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>